<resources>
    <string name="app_name">MedicalTest</string>
    <string name="PatientID">Patient ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="department">Department</string>
    <string name="nurse_id">Nurse ID</string>
    <string name="room">Room</string>

    <string name="test_id">Room</string>
    <string name="bpl">BPL</string>
    <string name="bph">BPH</string>
    <string name="temperature">Temperature</string>
    <string name="save_test">Save Test</string>

</resources>