<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".PatientActivity">

    <EditText
        android:id="@+id/editTextPatientId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PatientID" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPatientId"
        android:layout_marginTop="8dp"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFirstName"
        android:layout_marginTop="8dp"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/editTextDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLastName"
        android:layout_marginTop="8dp"
        android:hint="@string/department" />

    <EditText
        android:id="@+id/editTextNurseId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextDepartment"
        android:layout_marginTop="8dp"
        android:hint="@string/nurse_id" />

    <EditText
        android:id="@+id/editTextRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNurseId"
        android:layout_marginTop="8dp"
        android:hint="@string/room" />

    <Button
        android:id="@+id/buttonSavePatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextRoom"
        android:layout_marginTop="16dp"
        android:text="Save Patient" />

</RelativeLayout>
